# HydroEO

./: .gitignore  404.html  AGENTS.md  CITATION.cff  CLAUDE.md  Makefile  README.md  config_raster.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  pyproject_to_delete.toml
.github/workflows/: ci.yml  email-traffic-report.yml  full_test.yml
Development notes/: TODO.md  meeting_notes.md
HydroEO/: __init__.py  constants.py  flows.py  logging_config.py  plotting.py  project.py  system.py  validation.py  waterbody.py
HydroEO/cli/: __init__.py
HydroEO/downloaders/: cdse.py  creodias.py  dem.py  hydroweb.py  hydroweb_eodag.py
HydroEO/flows/: __init__.py  _clean_engine.py  _constants.py  _merge_engine.py  _reservoir_download.py  _reservoir_init.py  _reservoir_pipeline.py  _river_common.py  _river_download.py  _river_init.py  _river_pipeline.py  _run_config.py  _sentinel_shared.py  _summaries.py  download.py  plotting.py  preprocess.py
HydroEO/satellites/: icesat2.py  icesat2_download.py  icesat2_preprocess.py  sentinel.py  sentinel_download.py  sentinel_preprocess.py  swot.py  swot_download.py
HydroEO/satellites/icesat2/: __init__.py  download.py  preprocess.py
HydroEO/satellites/sentinel/: __init__.py  download.py  preprocess.py
HydroEO/satellites/swot/: __init__.py  _download.py  download.py  pixc.py  preprocess.py  raster.py
HydroEO/utils/: general.py  geometry.py  timeseries.py
HydroEO/utils/filters/: basic_filters.py  kalman.py
altimetry/: download.py  geometry.py  icesat2.py  project.py  system.py  utils.py
altimetry/download_utils/: creodias.py  hydroweb.py
altimetry/prior_utils/: hydroweb.py
altimetry/sat_utils/: icesat2.py  sentinel.py  swot.py
altimetry/utils/: geometry.py  timeseries.py  utils.py
altimetry/utils/downloaders/: hydroweb.py
altimetry/utils/filters/: basic_filters.py  kalman.py
altimetry/utils/satellites/: icesat2.py  sentinel.py  swot.py
configs/: reservoirs.md  reservoirs.yaml  rivers.md  rivers.yaml  swot_pixc.md  swot_pixc.yaml  swot_raster.md  swot_raster.yaml
configs/example_data/: example_res.dbf  example_res.shp
docs/: getting_started.md  index.md  reference.md
getting_started/: index.html
notebooks/: .order_restart  README.md  _deprecated_example_A.ipynb  _deprecated_example_B.ipynb  config_A.yaml  download.py  download_altimetry.ipynb  download_altimetry_development.ipynb  example_A.ipynb  example_B.ipynb  example_config.yaml  example_config_reservoirs.yaml  example_config_rivers.yaml  example_config_swot_raster.yaml  icesat2_update_development.ipynb  project_test.ipynb  project_test_initial.ipynb  reservoir_id_allocation_development.ipynb  river_development.ipynb
notebooks/example_data/: example_A.dbf  example_A.qmd  example_A.shp  example_A.shx  example_res.shx
notebooks/vj/: vortsjarv.dbf  vortsjarv.shp  vortsjarv.shx
purgatory/: README.md  icesat2_icepyx.py  icesat2_update_development.ipynb
reference/: index.html
tests/: README.md  conftest.py  test_api_contracts.py  test_basic.py  test_downloaders.py  test_e2e_run_pipeline.py  test_integration.py
tests/data/: README.md  aoi.e2e.gpkg  config.e2e.pixc.yaml  config.e2e.raster.yaml  config.e2e.rivers.yaml  config.e2e.yaml
tests/data/baselines/nuozhadu/: all_cleaned_timeseries.csv
tests/unit/: test_cli.py  test_creodias_client.py  test_dem.py  test_flows.py  test_hydroweb.py  test_icesat2_fields.py  test_no_runtime_prints.py  test_project_config.py  test_river_hydrocron_download.py  test_sentinel_downloaders.py  test_swot_downloaders.py  test_swot_pixc.py  test_swot_raster.py  test_system_product_validation.py  test_timeseries.py
(+8 files in other folders)
