[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# location of package relative to the repository root
# note: the package name 'HydroEO' can be different from the project name on PyPI
#       the project name (PyPI) is used for pip install, whereas the package name is used for imports
packages = ["HydroEO"]  

[tool.hatch.build.targets.sdist]
exclude = ["notebooks", "tests", "images"]

[project]
# name on PyPI (e.g. pip install HydroEO)
name = "HydroEO"
version = "0.1.1"
dependencies = [
    "earthaccess>=0.9.0,<2.0",
    "h5netcdf>=1.3.0,<2.0",
    "h5py>=3.10.0,<3.14",
    "netcdf4>=1.7.0,<2.0",
    "tqdm>=4.60.0,<5.0",
    "numpy>=1.26.0,<3.0",
    "pandas>=2.1.0,<3.0",
    "geopandas>=1.1.2,<2.0",
    "shapely>=2.0.0,<3.0",
    "matplotlib>=3.7.0,<4.0",
    "seaborn>=0.13.0,<1.0",
    "cmcrameri>=1.8,<2.0",
    "scikit-learn>=1.4.0,<2.0",
    "scipy>=1.11.0,<2.0",
    "py-hydroweb>=1.0.2,<2.0",
    "sliderule>=5.3.0,<5.4.0",
    "xarray>=2024.0.0,<2025.0",
    "rasterio>=1.3.0,<2.0",
    "rioxarray>=0.13.0,<1.0",
    "typer>=0.9.0,<1.0",
    "mikeio>=2.0",
    "contextily",
    "pyyaml>=6.0.3",
]

authors = [
  { name="Connor Chewning", email="cwch@dhigroup.com" },
]
description = "Easy access altimetry for water resource applications"
readme = "README.md"
requires-python = ">=3.10,<=3.12.13"
license = {file = "LICENSE"}
keywords = ["altimetry", "hydrology", "satellite", "SWOT", "Sentinel", "ICESat-2", "water-resources", "earth-observation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
]

[project.scripts]
hydroeo = "HydroEO.cli:app"

[project.optional-dependencies]
dev = [
  "build>=1.0",
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "pytest-mock>=3.12",
  "responses>=0.25",
  "ruff>=0.1",
  "mypy>=1.5",
  "mkdocs>=1.5",
  "mkdocstrings[python]>=0.23",
  "mkdocs-material>=9.0",
]

test = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "pytest-timeout>=2.3",
  "pytest-mock>=3.12",
  "responses>=0.25",
]

notebooks = [
  "jupyter>=1.0",
]

[project.urls]
"Homepage" = "https://github.com/DHI/HydroEO"
"Bug Tracker" = "https://github.com/DHI/HydroEO/issues"
"Documentation" = "https://dhi.github.io/HydroEO"
"Source" = "https://github.com/DHI/HydroEO"
"Changelog" = "https://github.com/DHI/HydroEO/releases"


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
markers = [
    "unit: Fast, fully mocked unit tests (no external network)",
    "integration: Live integration tests requiring valid API credentials",
    "api_contract: Credential-free tests for API endpoint reachability & schema validation",
    "sliderule: Tests that call the SlideRule API (skip with -m 'not sliderule' when API is down)",
]

[tool.uv]
# Security: enforce minimum safe versions for vulnerable transitive dependencies
# urllib3: CVE-2026-44432 (decompression bomb), CVE-2026-44431 (sensitive headers)
# pillow: CVE-2026-40192 (FITS GZIP bomb), CVE-2026-42311 (OOB write PSD integer overflow)
constraint-dependencies = [
    "urllib3>=2.7.0",
    "pillow>=12.2.0",
]

[tool.ruff]
# ignore long lines
lint.ignore = ["E501"]
